--- a/packages/@livestore/sqlite-wasm/package.json
+++ b/packages/@livestore/sqlite-wasm/package.json
@@ -9,8 +9,10 @@
     },
     "./load-wasm": {
       "types": "./dist/load-wasm/mod.browser.d.ts",
+      "react-native": "./dist/load-wasm/mod.browser.js",
       "node": "./dist/load-wasm/mod.node.js",
-      "browser": "./dist/load-wasm/mod.browser.js"
+      "browser": "./dist/load-wasm/mod.browser.js",
+      "default": "./dist/load-wasm/mod.browser.js"
     },
     "./node": {
       "types": "./dist/node/mod.d.ts",
